# megatest

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.txt  make.sh  megatest.c
.github/workflows/: cmake.yml
scripts/: build.sh  clean.sh  package.sh
src/: extra_objc.h  extra_objc.m  info.h  megatest.c  megatest.h  store.c  store.h
